configure webpack and plugins

--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "Contact",
+  "name": "client",
+  "version": "1.0.0",
+  "description": "",
+  "private": true,
   "scripts": {
-    "dev": "",
-    "build": "",
-    "start": ""
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack",
+    "start": "webpack --watch",
+    "dev": "webpack-dev-server"
   },
-  "author": "2U",
-  "license": "UNLICENSED",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    
-  },
-  "dependencies": {
-   
+    "@babel/core": "^7.16.0",
+    "@babel/preset-env": "^7.16.4",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.4.5",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.1",
+    "workbox-webpack-plugin": "^6.4.2",
+    "webpack-dev-server": "^4.0.0",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
